--- a/Comfy/assets/_main.scss
+++ b/Comfy/assets/_main.scss
@@ -176,7 +176,7 @@
         position: absolute;
         z-index: 1000;
         top: 8px;
-        left: 10px;
+        left: 18px;
         width: 40px;
         height: 40px;
         justify-content: center;
